# rust-websocket

./: README.md
pyapp/src/: main.py
pyapp/src/configs/: globals.py
pyapp/src/manager/: manager.py
pyapp/src/manager/subscriber/: subscriber.py
stablecoin_arbitrage/: Cargo.toml
stablecoin_arbitrage/src/: main.rs
